feat: [DEL-5321]: proto send task response (#41028)
* [DEL-5321]: API for sending task response
* [DEL-5321]: Delegate changes to use new API